--- a/source/ceramics.html.erb
+++ b/source/ceramics.html.erb
@@ -1,29 +1,32 @@
 <div class="banner">
-	<img src="../images/sequence12small.jpg" alt="">
+	<img src="../images/plates.jpg" alt="">
 </div>
 <article class="product-catalog">
 	<article class="product-list-item">
-		<img src="../images/bcpot002_smaller.jpg" alt="">
+		<img src="../images/prod2.jpg" alt="">
 	</article>
 	<article class="product-list-item">
-		<img src="../images/bcpot016_smaller.jpg" alt="">
+		<img src="../images/prod3.jpg" alt="">
+	</article>
+	<article class="product-list-item last">
+		<img src="../images/prod11.jpg" class="last-img" alt="">
 	</article>
 	<article class="product-list-item">
-		<img src="../images/bcpot006_smaller.jpg" alt="">
+		<img src="../images/prod4.jpg" alt="">
+	</article>
+		<article class="product-list-item last">
+		<img src="../images/prod5.jpg" class="last-img" alt="">
 	</article>
 	<article class="product-list-item">
-		<img src="../images/bcpot008_smaller.jpg" alt="">
+		<img src="../images/prod6.jpg"  alt="">
+	</article>
+	<article class="product-list-item last">
+		<img src="../images/prod7.jpg" class="last-img" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod8.jpg" alt="">
 	</article>
 		<article class="product-list-item">
-		<img src="../images/bcpot010_smaller.jpg" alt="">
-	</article>
-	<article class="product-list-item">
-		<img src="../images/bcpot012_smaller.jpg" alt="">
-	</article>
-	<article class="product-list-item">
-		<img src="../images/bcpot013_smaller.jpg" alt="">
-	</article>
-	<article class="product-list-item">
-		<img src="../images/bcpot014_smaller.jpg" alt="">
+		<img src="../images/prod10.jpg"  class="last-img" alt="">
 	</article>
 </article>
