--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,30 +4,42 @@ layout: layout
 ---
 
 <article class="product-catalog">
-	<h2>Ceramics</h2>
+<!-- 	<h2>Ceramics</h2> -->
 	<article class="product-list-item">
-		<img src="../images/bcpot002_smaller.jpg" alt="">
+		<img src="../images/prod11.jpg" alt="">
+		<p>Free Shipping</p>
+		<p>130$</p>
 	</article>
 	<article class="product-list-item">
-		<img src="../images/bcpot003_smaller.jpg" alt="">
+		<img src="../images/prod5.jpg" alt="">
+		<p>130$</p>
+	</article>
+	<article class="product-list-item last">
+		<img src="../images/prod10.jpg" class="last-img" alt="">
+		<p>130$</p>
 	</article>
 	<article class="product-list-item">
-		<img src="../images/bcpot006_smaller.jpg" alt="">
+		<img src="../images/prod4.jpg" alt="">
+		<p>130$</p>
 	</article>
 	<article class="product-list-item">
-		<img src="../images/bcpot008_smaller.jpg" alt="">
+		<img src="../images/prod1.jpg" alt="">
+		<p>130$</p>
 	</article>
-	<p><a href="">Shop Collectible Ceramics</a></p>
+	<article class="product-list-item">
+		<img src="../images/prod7.jpg" alt="">
+		<p>130$</p>
+	</article>
+	<p class="button"><a href="ceramics.html">Shop Collectible Ceramics</a></p>
 </article>
 
-<article>
-	<h1>Design Process</h1>
-	<p>The ceramic designers take regular trips to remote regions looking for inspiration from the natural environment, whether it is the outback or the wild coastlines. Back in the studio their sketches and photographs are worked up into designs, which complement the ceramic forms. The ceramic designers work closely with the gallery director, to ensure that not only is their work unique and contemporary, but is also responsive to the requirements of their clients.</p>
-	<img src="../images/bazaar14.jpg" alt="">
-	<a href="">Learn More</a>
+<article class="design-process">
+	<h1><a href="custom-design.html">Learn About Our Design Process</a></h1>
 </article>
-<article>
-	<h1>Custom Design Order</h1>
-	<p>We are happy to make an article from your own specifications. Please provide clear details and a drawing of what you require</p>
-	<a href="">Order Now</a>
+<article class="creativity">
+	<img src="../images/ban2.jpg" alt="">
+	<section class="last">
+	<h1>We Love Creativity!</h1>
+	<p>Do you have custom design? <a href="">Order here.</a></p>
+	</section>
 </article>
