--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,41 +9,88 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Bazaar Ceramics" %></title>
     
-    <%= stylesheet_link_tag "style" %>
-    <%= javascript_include_tag  "all" %>
+      <%= stylesheet_link_tag "style" %> 
+   <!--  <%= javascript_include_tag  "all" %> -->
   </head>
   
   <body class="<%= page_classes %>">
     <header>
-      <h1><img src="../images/bazaar-logo.jpg" alt=""></h1>
+      <!-- <h1><a href="index.html"><img src="../icons/bazaar-logo.png" alt=""></a></h1> -->
       <nav>
-        <ul>
-          <li><a href="">Home</a></li>
+        <ul class="account">
+          <li><a href=""><img src="../icons/user.png" alt="">My Account</a></li>
+          <li><a href=""><img src="../icons/shop.png" alt="">My Bag</a></li>
+        </ul>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
           <li><a href="ceramics.html">Ceramics</a></li>
-          <li><a href="">Custom Design</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="custom-design.html">Custom Design</a></li>
+          <li><a href="index.html"><img src="../icons/bazaar-logo.png" alt=""></a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <ul class="social-media">
+          <li><a href=""><img src="../icons/fb.png" alt=""></a></img></li>
+          <li><a href=""><img src="../icons/tumbler.png" alt=""></a></img></li>
+          <li><a href=""><img src="../icons/pinterest.png" alt=""></a></img></li>
+          <li><a href=""><img src="../icons/twitter.png" alt=""></a></img></li>
         </ul>
       </nav>
-      <a href="">Shopping Cart/My Account</a>
     </header>
-
+    <!-- Special to main page -->
+<!--     <article class="banner" height="375px">
+      <h1>Bazaar Ceramics</h1>
+    </article>
+    <h2></h2> -->
     <main>
       <%= yield %>      
     </main>
 
     <footer>
-       <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Ceramics</a></li>
-          <li><a href="">Custom Design</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Site Map</a></li>
-          <li><a href="">Site Credits</a></li>
-        </ul>
-      </nav>
-      <p>Copyright &copy 2015 Ipek Turgul</p>
+      <div class="footer-nav">
+        <div class="nav-sections">
+          <h3>Corporate</h3>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Site Map</a></li>
+            <li><a href="">Site Credits</a></li>
+          </ul> 
+        </div>
+        <div class="nav-sections">
+          <h3>Account</h3>
+          <ul>
+            <li><a href="">My Orders</a></li>
+            <li><a href="">My Account</a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </div>
+        <div class="nav-sections">
+          <h3>Help</h3>
+          <ul>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Shipping</a></li>
+            <li><a href="">Returns</a></li>
+          </ul>  
+        </div>
+        <div class="nav-sections">
+          <h3>Our Products</h3>
+          <ul>
+            <li><a href="">Ceramics</a></li>
+            <li><a href="">Custom Design</a></li>
+          </ul>
+        </div>
+      </div>
+      <ul class="social-media">
+        <li><a href=""><img src="../icons/fb.png" alt=""></a></img></li>
+        <li><a href=""><img src="../icons/tumbler.png" alt=""></a></img></li>
+        <li><a href=""><img src="../icons/pinterest.png" alt=""></a></img></li>
+        <li><a href=""><img src="../icons/twitter.png" alt=""></a></img></li>
+      </ul> 
+      <div class="copyright">
+      <p>Copyright &copy 2015 Ipek Turgul</p> 
+      </div> 
     </footer>
   </body>
 </html>
