--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -4,6 +4,11 @@
 //Compass imports
 @import "compass";
 @import "compass/reset";
+@import "compass/css3/box-shadow";
+@import "compass/css3/text-shadow";
+@import 'compass/css3/filter';
+@import "compass/css3/flexbox";
+@import "compass/css3/transition";
 
 //External Libraries
 @import "susy";
@@ -15,3 +20,4 @@
 @import "base";
 @import "layout";
 @import "ceramics";
+@import "navigation";
