navigation style fixes

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,19 +21,19 @@
           <li><a href=""><img src="../icons/user.png" alt="">My Account</a></li>
           <li><a href=""><img src="../icons/shop.png" alt="">My Bag</a></li>
         </ul>
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="ceramics.html">Ceramics</a></li>
-          <li><a href="custom-design.html">Custom Design</a></li>
-          <li><a href="index.html"><img src="../icons/bazaar-logo.png" alt=""></a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
         <ul class="social-media">
           <li><a href=""><img src="../icons/fb.png" alt=""></a></img></li>
           <li><a href=""><img src="../icons/tumbler.png" alt=""></a></img></li>
           <li><a href=""><img src="../icons/pinterest.png" alt=""></a></img></li>
           <li><a href=""><img src="../icons/twitter.png" alt=""></a></img></li>
+        </ul>
+        <ul class="menu">
+          <!-- <li><a href="index.html">Home</a></li> -->
+          <li><a href="ceramics.html">Ceramics</a></li>
+          <li><a href="custom-design.html">Custom Design</a></li>
+          <li><a href="index.html"><img src="../icons/bazaar-logo.png" alt=""></a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -82,6 +82,10 @@
           </ul>
         </div>
       </div>
+      <ul class="payment">
+        <li><img src="../icons/paypal.png" alt=""></li>
+        <li><img src="../icons/visa.png" alt=""></li>
+      </ul>
       <ul class="social-media">
         <li><a href=""><img src="../icons/fb.png" alt=""></a></img></li>
         <li><a href=""><img src="../icons/tumbler.png" alt=""></a></img></li>
