--- a/source/custom-design.html.erb
+++ b/source/custom-design.html.erb
@@ -2,3 +2,30 @@
 title: Bazaar Ceramics - Custom Design Request
 layout: layout
 ---
+
+<article class="company">
+	<h1>The Design Process</h1>
+	<p>The ceramic designers take regular trips to remote regions looking for inspiration from the natural environment, whether it is the outback or the wild coastlines. Back in the studio their sketches and photographs are worked up into designs, which complement the ceramic forms. The ceramic designers work closely with the gallery director, to ensure that not only is their work unique and contemporary, but is also responsive to the requirements of their clients.</p>
+</article>
+
+
+
+<article class="company">
+	
+	<h1>The Production Process</h1>
+	<p>Bazaar Ceramics are constantly experimenting with new designs and techniques. The process of developing a particular range of ceramics, starts with the design process. The ceramic designers and gallery director meet regularly to discuss new ideas for product ranges. It may be that the designers are following through on an inspiration from a field trip or perhaps the gallery director has some suggestions to make based on feedback from customers.</p>
+
+	<p>Promising designs are developed into working drawings which the production potters use to create the ceramic forms. Depending on the type of decoration, the designers may apply the decoration at this stage, or after they have been ““bisqued” (fired to 1000 degrees celsius). These prototype designs go through a lengthy development stage of testing and review until the designer is happy with the finished product. At this stage a limited number of pots are produced and displayed in the gallery. If they do well in the gallery, they become a “standard line”.</p>
+</article>
+
+<form action="#">
+		<label class="desc" for="full-name">Full Name</label>
+		<input type="text" size="8" name="full-name"tabindex="1">
+	
+		<label class="desc" for="email">Email</label>
+		<input type="email" name="email" value="" tabindex="3" max-length="255">
+		
+		<label class="desc" for="message">Message</label>
+		<textarea spellcheck="true" name="message" rows="10" columns="50" tabindex="4"></textarea>
+
+</form>
