--- a/source/ceramics.html.erb
+++ b/source/ceramics.html.erb
@@ -1,32 +1,73 @@
 <div class="banner">
-	<img src="../images/plates.jpg" alt="">
+	<h1>Collectible Ceramics</h1>
 </div>
 <article class="product-catalog">
 	<article class="product-list-item">
-		<img src="../images/prod2.jpg" alt="">
+		<img src="../images/prod1.jpg" alt="">
+		<div class="product-content">
+			<h3 class="product-name"><a href="">Oriental Cup</a></h3>
+			<div class="product-price">$135</div>
+		</div>
 	</article>
-	<article class="product-list-item">
-		<img src="../images/prod3.jpg" alt="">
-	</article>
+
 	<article class="product-list-item last">
-		<img src="../images/prod11.jpg" class="last-img" alt="">
+		<img src="../images/prod5.jpg" alt="">
 	</article>
-	<article class="product-list-item">
-		<img src="../images/prod4.jpg" alt="">
-	</article>
-		<article class="product-list-item last">
-		<img src="../images/prod5.jpg" class="last-img" alt="">
-	</article>
-	<article class="product-list-item">
+	<!-- <article class="product-list-item">
 		<img src="../images/prod6.jpg"  alt="">
-	</article>
-	<article class="product-list-item last">
-		<img src="../images/prod7.jpg" class="last-img" alt="">
+	</article> -->
+	<!-- <article class="product-list-item last">
+		<img src="../images/prod7.jpg" alt="">
 	</article>
 	<article class="product-list-item">
 		<img src="../images/prod8.jpg" alt="">
+	</article> -->
+	<article class="product-list-item">
+		<img src="../images/prod9.jpg" alt="">
 	</article>
-		<article class="product-list-item">
-		<img src="../images/prod10.jpg"  class="last-img" alt="">
+	<article class="product-list-item">
+		<img src="../images/prod10.jpg" alt="">
+	</article>
+	<article class="product-list-item last">
+		<img src="../images/prod25.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod26.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod13.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod14.jpg"  alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod15.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod16.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod17.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod18.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod19.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod20.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod21.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod22.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod23.jpg" alt="">
+	</article>
+	<article class="product-list-item">
+		<img src="../images/prod24.jpg" alt="">
 	</article>
 </article>
